Fix view sizing for home page on mobile

--- a/src/main/resources/public/styles/home.css
+++ b/src/main/resources/public/styles/home.css
@@ -2,6 +2,10 @@ body {
     text-align: center;
 }
 
+#logo {
+    max-width: 100%;
+}
+
 #create_rsvp {
     color: white;
     text-decoration: none;
